// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#edgeCases (clipY=true) #above: bottomLeft 1`] = `
Object {
  "left": "0px",
  "position": "absolute",
  "top": "372px",
}
`;

exports[`#edgeCases (clipY=true) #above: bottomRight 1`] = `
Object {
  "left": "400px",
  "position": "absolute",
  "top": "372px",
}
`;

exports[`#edgeCases (clipY=true) #above: topLeft 1`] = `
Object {
  "left": "0px",
  "position": "absolute",
  "top": "28px",
}
`;

exports[`#edgeCases (clipY=true) #above: topRight 1`] = `
Object {
  "left": "400px",
  "position": "absolute",
  "top": "28px",
}
`;

exports[`#edgeCases (clipY=true) #aboveLeft: bottomLeft 1`] = `
Object {
  "left": "0px",
  "position": "absolute",
  "top": "372px",
}
`;

exports[`#edgeCases (clipY=true) #aboveLeft: bottomRight 1`] = `
Object {
  "left": "400px",
  "position": "absolute",
  "top": "372px",
}
`;

exports[`#edgeCases (clipY=true) #aboveLeft: topLeft 1`] = `
Object {
  "left": "0px",
  "position": "absolute",
  "top": "28px",
}
`;

exports[`#edgeCases (clipY=true) #aboveLeft: topRight 1`] = `
Object {
  "left": "400px",
  "position": "absolute",
  "top": "28px",
}
`;

exports[`#edgeCases (clipY=true) #aboveRight: bottomLeft 1`] = `
Object {
  "left": "0px",
  "position": "absolute",
  "top": "372px",
}
`;

exports[`#edgeCases (clipY=true) #aboveRight: bottomRight 1`] = `
Object {
  "left": "400px",
  "position": "absolute",
  "top": "372px",
}
`;

exports[`#edgeCases (clipY=true) #aboveRight: topLeft 1`] = `
Object {
  "left": "0px",
  "position": "absolute",
  "top": "28px",
}
`;

exports[`#edgeCases (clipY=true) #aboveRight: topRight 1`] = `
Object {
  "left": "400px",
  "position": "absolute",
  "top": "28px",
}
`;

exports[`#edgeCases (clipY=true) #below: bottomLeft 1`] = `
Object {
  "left": "0px",
  "position": "absolute",
  "top": "372px",
}
`;

exports[`#edgeCases (clipY=true) #below: bottomRight 1`] = `
Object {
  "left": "400px",
  "position": "absolute",
  "top": "372px",
}
`;

exports[`#edgeCases (clipY=true) #below: topLeft 1`] = `
Object {
  "left": "0px",
  "position": "absolute",
  "top": "28px",
}
`;

exports[`#edgeCases (clipY=true) #below: topRight 1`] = `
Object {
  "left": "400px",
  "position": "absolute",
  "top": "28px",
}
`;

exports[`#edgeCases (clipY=true) #belowLeft: bottomLeft 1`] = `
Object {
  "left": "0px",
  "position": "absolute",
  "top": "372px",
}
`;

exports[`#edgeCases (clipY=true) #belowLeft: bottomRight 1`] = `
Object {
  "left": "400px",
  "position": "absolute",
  "top": "372px",
}
`;

exports[`#edgeCases (clipY=true) #belowLeft: topLeft 1`] = `
Object {
  "left": "0px",
  "position": "absolute",
  "top": "28px",
}
`;

exports[`#edgeCases (clipY=true) #belowLeft: topRight 1`] = `
Object {
  "left": "400px",
  "position": "absolute",
  "top": "28px",
}
`;

exports[`#edgeCases (clipY=true) #belowRight: bottomLeft 1`] = `
Object {
  "left": "0px",
  "position": "absolute",
  "top": "372px",
}
`;

exports[`#edgeCases (clipY=true) #belowRight: bottomRight 1`] = `
Object {
  "left": "400px",
  "position": "absolute",
  "top": "372px",
}
`;

exports[`#edgeCases (clipY=true) #belowRight: topLeft 1`] = `
Object {
  "left": "0px",
  "position": "absolute",
  "top": "28px",
}
`;

exports[`#edgeCases (clipY=true) #belowRight: topRight 1`] = `
Object {
  "left": "400px",
  "position": "absolute",
  "top": "28px",
}
`;

exports[`#edgeCases (clipY=true) #leftOf: bottomLeft 1`] = `
Object {
  "left": "28px",
  "position": "absolute",
  "top": "400px",
}
`;

exports[`#edgeCases (clipY=true) #leftOf: bottomRight 1`] = `
Object {
  "left": "372px",
  "position": "absolute",
  "top": "400px",
}
`;

exports[`#edgeCases (clipY=true) #leftOf: topLeft 1`] = `
Object {
  "left": "28px",
  "position": "absolute",
  "top": "0px",
}
`;

exports[`#edgeCases (clipY=true) #leftOf: topRight 1`] = `
Object {
  "left": "372px",
  "position": "absolute",
  "top": "0px",
}
`;

exports[`#edgeCases (clipY=true) #rightOf: bottomLeft 1`] = `
Object {
  "left": "28px",
  "position": "absolute",
  "top": "400px",
}
`;

exports[`#edgeCases (clipY=true) #rightOf: bottomRight 1`] = `
Object {
  "left": "372px",
  "position": "absolute",
  "top": "400px",
}
`;

exports[`#edgeCases (clipY=true) #rightOf: topLeft 1`] = `
Object {
  "left": "28px",
  "position": "absolute",
  "top": "0px",
}
`;

exports[`#edgeCases (clipY=true) #rightOf: topRight 1`] = `
Object {
  "left": "372px",
  "position": "absolute",
  "top": "0px",
}
`;
